Fixed line wrapping at fixed width bug + changed view header color

--- a/app/static/scss/paste/_view.scss
+++ b/app/static/scss/paste/_view.scss
@@ -9,7 +9,7 @@
 }
 
 .paste-header {
-    background-color: $dark-blue;
+    background-color: $blue-alt;
     height: 85px;
     padding: 20px 50px;
     position: fixed;
